--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -40,7 +40,7 @@
 @media screen and (max-width: 990px) {
   .hero {
     .hero-info {
-      text-align:right;
+      text-align:center;
     }
   }
 }
