--- a/src/components/about/teamInfo.scss
+++ b/src/components/about/teamInfo.scss
@@ -6,7 +6,7 @@
   margin: 0 auto;
   margin-top: 60px;
   position: relative;
-  border: 4px solid $light-color;
+  border: 4px solid $main-color;
   padding: 50px;
   margin-bottom: 60px;
 
