--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -1,7 +1,8 @@
 @import '../../style/App.scss';
 
 .blog {
-  background-color: $light-color;
+  background-color: #090D29;
+  color:#fff;
   padding: 60px 0;
   
 }
