--- a/src/components/partners/partners.scss
+++ b/src/components/partners/partners.scss
@@ -1,6 +1,7 @@
 @import '../../style/App.scss';
 
 #partners {
-  background-color: $light-color;
+  background-color: #090D29;
+  color:#fff;
   padding: 80px 0;
 }
