--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -11,6 +11,7 @@
         margin-right: 10px;
         cursor: pointer;
         transition: 0.3s ease;
+        color:#fff;
       }
       li:hover {
         background-color: $main-color;
