--- a/src/components/Services/cardstyle.css
+++ b/src/components/Services/cardstyle.css
@@ -3,6 +3,8 @@
 .card1{
     width: 25rem;
     height:25rem;
+    background-color: #070A1F;
+   
   
 }
 
@@ -12,11 +14,18 @@
 
 .card-bodycard{
     padding: 4rem 0!important;
+    
 }
+
+
+
+
+
 
 .card-text{
     font-size: 1rem;
     padding: 0.4rem 1.9rem;
+    color: #fff;
 }
 
 .container-fluid{
@@ -48,3 +57,67 @@
     width: 50%;
     margin-bottom: 30px;
 }
+
+.container {
+    position: relative;
+    width: 75%;
+  }
+  
+  .image {
+      
+    display: block;
+    width: 100%;
+    height: auto;
+    z-index: 2;
+    background-color: #000;
+    -webkit-transition: .5s;
+    transition: .5s;
+    
+  }
+  .container:hover img {
+    opacity: .4;
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
+
+
+  
+  .overlay {
+    position: absolute;
+    opacity: 0.75;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #090861;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+  }
+  
+  .container:hover .overlay {
+    height: 100%;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
