--- a/src/components/blog/blogBox.scss
+++ b/src/components/blog/blogBox.scss
@@ -1,7 +1,8 @@
 @import '../../style/App.scss';
 
 .blog__box {
-  background-color: $white-color;
+  background-color: #070A1F;
+  color:#999;
   width: 100%;
   max-width: 370px;
   min-height: 460px;
