--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,38 +1,51 @@
 @import '../../style/App.scss';
 
 .hero {
-  padding-top: 240px;
+  padding-top: 0px;
   width: 100%;
-  padding-bottom: 60px;
-  .hero-info {
-    padding-top: 60px;
+  padding-bottom: 0px;
 
-    p {
-      padding-top: 20px;
-      padding-bottom: 50px;
+
+  .hero-info {
+    padding-top: 0px;
+    top:100px;
+   
+
+    h1 {
+      padding-bottom: 200px;
     }
   }
 
   .hero-image {
-    max-width: 600px;
-    height: auto;
-    float: right;
+    width: 100%;
+    height: 45%;
+    object-fit: cover;
+    
   }
+  
 }
+
+
+
+  
+  
 
 @media screen and (max-width: 1080px) {
   .hero {
-    padding-top: 140px;
+    padding-top: 0px;
     
 
     .hero-info {
       padding-top: 0px;
+      background-color: #1a1919;
+      color:#999;
     }
 
     .hero-image {
       float: none;
       margin: 0 auto;
       margin-top: 50px;
+
     }
   }
 }
@@ -41,6 +54,23 @@
   .hero {
     .hero-info {
       text-align:center;
+      background-color: #1a1919;
+      color:#999;
     }
   }
+}
+
+@media screen and (max-width: 520px) {
+  .hero {
+    .hero-info {
+      text-align:center;
+      background-color: #1a1919;
+      padding-top: 66px;
+      
+    }
+
+    
+
+
+}
 }
