--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -5,11 +5,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: $white-color;  
+  background-color:$white-color;
   width: 100%;
   padding: 9px 0;
   transition:  0.3s ease;
   z-index: 100;
+  opacity: 0.88;
+ 
+  
 
   .mobile__menu {
     display: none;
@@ -36,7 +39,7 @@
   }
 }
 .extraLargeNavbar {
-  padding: 29px 0;
+  padding: 20px 0;
 }
 
 // MOBILE NAVBAR
@@ -51,6 +54,7 @@
   transition:  0.4s ease;
   padding: 20px;
   overflow-y: auto;
+  
   
   .mobile__navbar-close {
     padding: 20px;
@@ -119,5 +123,10 @@
 @media screen and (max-width: 520px) {
   .mobile__navbar {
     width: 100%;
+    
+  }
+  .desktop__menu {
+    background: transparent;
+    height: 20px;
   }
 }
